fix: scrollbar resposivity

--- a/src/views/home/templates/explore/Explore.scss
+++ b/src/views/home/templates/explore/Explore.scss
@@ -34,16 +34,25 @@
   }
   .explore-grid-row:nth-child(2) {
     width: 100%;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    white-space: nowrap;
-    -webkit-overflow-scrolling: touch;
+    height: 100%;
     display: flex;
     justify-content: center;
     scroll-behavior: smooth;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+
+    -ms-overflow-style: none;  /* IE and Edge */
+     scrollbar-width: none;  /* Firefox */
+
+    &::-webkit-scrollbar { /* Chrome */
+      display: none;
+    }
 
     .scrollable-row {
       width: 100%;
+      height: 100%;
       display: inline-block;
 
       img {
